--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <form class="new-book-form" id="newBookForm">
         <label>
           Title
-          <input type="text" name="title" id="title" />
+          <input type="text" name="title" id="title" required />
         </label>
         <label>
           Author
-          <input type="text" name="author" id="author" />
+          <input type="text" name="author" id="author" required />
         </label>
         <label>
           Image URL
@@ -27,7 +27,7 @@
         </label>
         <label>
           Genre
-          <select name="genre" id="genre">
+          <select name="genre" id="genre" required>
             <option selected disabled>Genre</option>
             <option value="fantasy">Fantasy</option>
             <option value="horror">Horror</option>
@@ -36,13 +36,19 @@
         </label>
         <label>
           Release Year
-          <input type="number" name="release-year" id="releaseYear" />
+          <input
+            type="number"
+            name="release-year"
+            id="releaseYear"
+            maxlength="4"
+            required
+          />
         </label>
         <label>
           Pages
-          <input type="number" name="pages" id="pages" />
+          <input type="number" name="pages" id="pages" required />
         </label>
-        <button class="cancel-button" formmethod="dialog">Cancel</button>
+        <button class="close-button" formmethod="dialog">Cancel</button>
         <button class="confirm-button">Add</button>
       </form>
     </dialog>
