--- a/index.html
+++ b/index.html
@@ -8,50 +8,113 @@
     <script src="main.js" defer></script>
   </head>
   <body>
-    <h1>Library</h1>
-    <button class="new-button">Add</button>
-    <dialog class="new-book-dialog">
-      <h2>Add new Book</h2>
-      <form class="new-book-form" id="newBookForm">
-        <label>
-          Title
-          <input type="text" name="title" id="title" required />
-        </label>
-        <label>
-          Author
-          <input type="text" name="author" id="author" required />
-        </label>
-        <label>
-          Image URL
-          <input type="text" name="image-url" id="imageUrl" />
-        </label>
-        <label>
-          Genre
-          <select name="genre" id="genre" required>
-            <option selected disabled>Genre</option>
-            <option value="fantasy">Fantasy</option>
-            <option value="horror">Horror</option>
-            <option value="biography">Biography</option>
-          </select>
-        </label>
-        <label>
-          Release Year
-          <input
-            type="number"
-            name="release-year"
-            id="releaseYear"
-            maxlength="4"
-            required
-          />
-        </label>
-        <label>
-          Pages
-          <input type="number" name="pages" id="pages" required />
-        </label>
-        <button class="close-button" formmethod="dialog">Cancel</button>
-        <button class="confirm-button">Add</button>
-      </form>
-    </dialog>
-    <div class="books"></div>
+    <header>
+      <div class="header-container | container">
+        <h1>Logo</h1>
+        <div class="search-container">
+          <div class="search-bar">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M10 10m-7 0a7 7 0 1 0 14 0a7 7 0 1 0 -14 0" />
+              <path d="M21 21l-6 -6" />
+            </svg>
+            <input type="text" name="search" id="search" placeholder="Search" />
+          </div>
+        </div>
+        <button class="nav-button">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+            <path d="M4 6l16 0" />
+            <path d="M4 12l16 0" />
+            <path d="M4 18l16 0" />
+          </svg>
+        </button>
+        <nav>
+          <ul>
+            <li><a href="/home">Home</a></li>
+            <li><a href="/library">Library</a></li>
+            <li><a href="/discover">Discover</a></li>
+            <li>
+              <button class="user-container">
+                <img src="https://placehold.co/50x50" alt="user-image" />
+                <p>Username</p>
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <div class="main-header">
+        <h2>Library</h2>
+        <button class="new-button">Add</button>
+      </div>
+      <dialog class="new-book-dialog">
+        <h2>Add new Book</h2>
+        <form class="new-book-form" id="newBookForm">
+          <label>
+            Title
+            <input type="text" name="title" id="title" required />
+          </label>
+          <label>
+            Author
+            <input type="text" name="author" id="author" required />
+          </label>
+          <label>
+            Image URL
+            <input type="text" name="image-url" id="imageUrl" />
+          </label>
+          <label>
+            Genre
+            <select name="genre" id="genre" required>
+              <option selected disabled>Genre</option>
+              <option value="fantasy">Fantasy</option>
+              <option value="horror">Horror</option>
+              <option value="biography">Biography</option>
+            </select>
+          </label>
+          <label>
+            Release Year
+            <input
+              type="number"
+              name="release-year"
+              id="releaseYear"
+              maxlength="4"
+              required
+            />
+          </label>
+          <label>
+            Pages
+            <input type="number" name="pages" id="pages" required />
+          </label>
+          <button class="close-button" formmethod="dialog">Cancel</button>
+          <button class="confirm-button">Add</button>
+        </form>
+      </dialog>
+      <div class="books"></div>
+    </main>
+    <footer>
+      <p>Made by <a href="https://github.com/antxhan">Anton</a></p>
+    </footer>
   </body>
 </html>
