--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="header-container | container">
-        <h1>Logo</h1>
+        <a href="/"><h1>Logo</h1></a>
         <div class="search-container">
           <div class="search-bar">
             <svg
@@ -49,12 +49,103 @@
             <path d="M4 18l16 0" />
           </svg>
         </button>
-        <nav>
+        <nav aria-expanded="false">
+          <button class="nav-close-button">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M18 6l-12 12" />
+              <path d="M6 6l12 12" />
+            </svg>
+          </button>
           <ul>
-            <li><a href="/home">Home</a></li>
-            <li><a href="/library">Library</a></li>
-            <li><a href="/discover">Discover</a></li>
             <li>
+              <a href="/home"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M5 12l-2 0l9 -9l9 9l-2 0" />
+                  <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7" />
+                  <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6" />
+                </svg>
+                <p>Home</p></a
+              >
+            </li>
+            <li>
+              <a href="/library">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-books"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path
+                    d="M5 4m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z"
+                  />
+                  <path
+                    d="M9 4m0 1a1 1 0 0 1 1 -1h2a1 1 0 0 1 1 1v14a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1z"
+                  />
+                  <path d="M5 8h4" />
+                  <path d="M9 16h4" />
+                  <path
+                    d="M13.803 4.56l2.184 -.53c.562 -.135 1.133 .19 1.282 .732l3.695 13.418a1.02 1.02 0 0 1 -.634 1.219l-.133 .041l-2.184 .53c-.562 .135 -1.133 -.19 -1.282 -.732l-3.695 -13.418a1.02 1.02 0 0 1 .634 -1.219l.133 -.041z"
+                  />
+                  <path d="M14 9l4 -1" />
+                  <path d="M16 16l3.923 -.98" />
+                </svg>
+                <p>Library</p></a
+              >
+            </li>
+            <li>
+              <a href="/discover">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="icon icon-tabler icons-tabler-outline icon-tabler-world"
+                >
+                  <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                  <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
+                  <path d="M3.6 9h16.8" />
+                  <path d="M3.6 15h16.8" />
+                  <path d="M11.5 3a17 17 0 0 0 0 18" />
+                  <path d="M12.5 3a17 17 0 0 1 0 18" />
+                </svg>
+                <p>Discover</p>
+              </a>
+            </li>
+            <li class="user-item">
               <button class="user-container">
                 <img src="https://placehold.co/50x50" alt="user-image" />
                 <p>Username</p>
@@ -86,18 +177,18 @@
           </label>
           <label>
             Genre
-            <select name="genre" id="genre" required>
-              <option selected disabled>Genre</option>
-              <option value="fantasy">Fantasy</option>
-              <option value="horror">Horror</option>
-              <option value="biography">Biography</option>
+            <select name="genre" id="genre">
+              <option selected disabled></option>
+              <option value="Fantasy">Fantasy</option>
+              <option value="Horror">Horror</option>
+              <option value="Biography">Biography</option>
             </select>
           </label>
           <label>
             Release Year
             <input
               type="number"
-              name="release-year"
+              name="releaseYear"
               id="releaseYear"
               maxlength="4"
               required
@@ -107,7 +198,23 @@
             Pages
             <input type="number" name="pages" id="pages" required />
           </label>
-          <button class="close-button" formmethod="dialog">Cancel</button>
+          <button class="close-button" formmethod="dialog">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
+              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+              <path d="M18 6l-12 12" />
+              <path d="M6 6l12 12" />
+            </svg>
+          </button>
           <button class="confirm-button">Add</button>
         </form>
       </dialog>
